--- a/real_data.ipynb
+++ b/real_data.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "array(['Accept null hypothesis'], dtype='<U22')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,14 +117,15 @@
    "source": [
     "# choose 'tweet_has_disinfo_text_or_hashtags' as group variable\n",
     "# English data set\n",
-    "p_value=main_program.multiple_test(featurelist,groupvariable[2],df_eng,[0.75,0.75])\n",
+    "accuracy_vec=[0.75]*(len(featurelist)+1)\n",
+    "p_value=main_program.multiple_test(featurelist,groupvariable[2],df_eng,accuracy_vec)\n",
     "result=main_program.holm(p_value, alpha=0.1)\n",
     "np.unique(np.array(result))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +134,7 @@
        "array(['subj_verb_inversion'], dtype='<U23')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +142,7 @@
    "source": [
     "# choose 'tweet_has_disinfo_text_or_hashtags' as group variable\n",
     "# French data set\n",
-    "p_value=main_program.multiple_test(featurelist,groupvariable[2],df_fre,[0.75,0.75])\n",
+    "p_value=main_program.multiple_test(featurelist,groupvariable[2],df_fre,accuracy_vec)\n",
     "result=main_program.holm(p_value, alpha=0.1)\n",
     "np.unique(np.array(result))\n",
     "index=[]\n",
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +163,7 @@
        "array(['refs_to_self', 'other_conjunctions', 'sentiment'], dtype='<U23')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +171,7 @@
    "source": [
     "# choose 'tweet_has_disinfo_text_or_hashtags' as group variable\n",
     "# Italy data set\n",
-    "p_value=main_program.multiple_test(featurelist,groupvariable[2],df_ita,[0.75,0.75])\n",
+    "p_value=main_program.multiple_test(featurelist,groupvariable[2],df_ita,accuracy_vec)\n",
     "result=main_program.holm(p_value, alpha=0.1)\n",
     "np.unique(np.array(result))\n",
     "index=[]\n",
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +194,7 @@
        "      dtype='<U23')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +202,7 @@
    "source": [
     "# choose 'tweet_has_disinfo_text_or_hashtags' as group variable\n",
     "# Dutch data set\n",
-    "p_value=main_program.multiple_test(featurelist,groupvariable[2],df_dut,[0.75,0.75])\n",
+    "p_value=main_program.multiple_test(featurelist,groupvariable[2],df_dut,accuracy_vec)\n",
     "result=main_program.holm(p_value, alpha=0.1)\n",
     "np.unique(np.array(result))\n",
     "index=[]\n",
